# MerchQuantum

./: .gitignore  AGENTS.md  Cargo.toml  MERCH_QUANTUM_MANIFEST.md  START_HERE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
.codex-provider-tests/: tsconfig.provider-tests.json
.github/workflows/: merchquantum-smoke.yml
app/: globals.css  layout.tsx  page.tsx
app/api/ai/listing/: route.ts
app/api/printify/batch-create/: route.ts
app/api/printify/connect/: route.ts
app/api/printify/disconnect/: route.ts
app/api/printify/product/: route.ts
app/api/printify/products/: route.ts
app/api/providers/artwork/[assetId]/: route.ts
app/api/providers/batch-create/: route.ts
app/api/providers/connect/: route.ts
app/api/providers/disconnect/: route.ts
app/api/providers/import-listings/: route.ts
app/api/providers/orders/: route.ts
app/api/providers/product/: route.ts
app/api/providers/products/: route.ts
app/api/providers/publish-listings/: route.ts
app/api/refinery/yaml-agent/: route.ts
app/api/update-listing-metadata/: route.ts
app/app/: page.tsx
app/components/: MerchQuantumApp.tsx
app/components/merch-quantum/: controller.tsx  types.ts  ui.tsx  view.tsx
app/components/merch-quantum/hooks/: useAmbientStreams.ts  useBatchState.tsx  useProviderWorkspace.ts  useQuantumEditor.ts
docs/: AGENTS.md  ARCHITECTURE.md  BOOTLOADER.md  CONTROL_LAYER_MAP.md  HOSTINGER_CLOUD_STARTUP.md  MERCHQUANTUM_RECOVERY.md  PROMPT_PLAYBOOK.md  PROVIDER_RULES.md  QUANTUM_MEMORY_MANIFEST.md  START_HERE.md  STATE_RESTORE.md
lib/: user-facing-errors.ts
lib/ai/: context-quantum-evaluator.ts  listing-engine.ts
lib/client/: quantum-routes.ts
lib/demo/: merchquantum-demo.ts
lib/providers/: artwork.ts  client-options.ts  contracts.ts  errors.ts  governor.ts  registry.ts  session.ts  types.ts
lib/providers/apliiq/: adapter.ts
lib/providers/gooten/: adapter.ts
lib/providers/printful/: adapter.ts
lib/providers/printify/: adapter.ts
lib/providers/prodigi/: adapter.ts
lib/providers/spod/: adapter.ts
lib/services/merch-quantum/: artwork-analysis.ts  batch-state.ts  platform-utils.ts  product-logic.ts
scripts/: generate-smoke-report.mjs  serve-web.ps1  vercel-build.sh
src/: main.rs  models.rs  router.rs  vault.rs
src/providers/: mod.rs
src/ui/: app.rs  carousel.rs
tests/ai/: ai-listing-route.test.ts  context-quantum-evaluator.test.ts  listing-engine.test.ts  quantum-client.test.ts  yaml-agent-route.test.ts
tests/ai/fixtures/: golden-corpus.ts
tests/providers/: provider-core.test.ts
(+1 files in other folders)
