[package]
name = "quantum_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Engine (Async & Data Structuring)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# The Omni-Blast Core (Networking & URLs)
# Added multipart & rustls-tls for secure Etsy image uploads
reqwest = { version = "0.11.27", features = ["json", "multipart", "rustls-tls"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

# The Force Protocol (Cryptography for Amazon SigV4 & TikTok HMAC)
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"

# The Cockpit (ContextQuantum Dioxus UI & Pipeline State)
dioxus = { version = "0.6", features = ["desktop"] }
futures-util = "0.3"
